# QieMedia

./: .editorconfig  License.md  ReadMe.md
Dependencies/: ReadMe.md
Dependencies/arm64-ohos/include/openssl/: asn1.h  asn1t.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  ocsp.h  pkcs7.h  x509_acert.h  x509_vfy.h
Dependencies/x64-ohos/include/openssl/: asn1.h  bio.h  cmp.h  conf.h  configuration.h  core_names.h  crypto.h  ct.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509v3.h
REDPlayer/source/harmony/: .gitignore
REDPlayer/source/harmony/entry/src/main/ets/pages/: DemoRedPlayerPage.ets
REDPlayer/source/harmony/redplayerproxy/: build-profile.json5
REDPlayer/source/redplayercore/: CMakeLists.txt
REDPlayer/source/redplayercore/redbase/include/: RedDef.h
REDPlayer/source/redplayercore/reddecoder/: CMakeLists.txt
REDPlayer/source/redplayercore/reddecoder/audio/audio_decoder/: ffmpeg_audio_decoder.cpp
REDPlayer/source/redplayercore/reddecoder/common/: buffer.h
REDPlayer/source/redplayercore/reddecoder/video/video_decoder/: ffmpeg_video_decoder.cpp
REDPlayer/source/redplayercore/reddownload/: CMakeLists.txt
REDPlayer/source/redplayercore/redplayer/: CMakeLists.txt
REDPlayer/source/redplayercore/redplayer/RedCore/: RedCore.cpp
REDPlayer/source/redplayercore/redplayer/RedCore/module/processer/: AudioProcesser.cpp
REDPlayer/source/redplayercore/redplayer/RedCore/module/renderHal/: RedRenderAudioHal.cpp
REDPlayer/source/redplayercore/redplayer/RedCore/module/sourcer/format/: RedFormat.c  reddownload_adapter.c
REDPlayer/source/redplayercore/redplayer/base/: RedBuffer.h
REDPlayer/source/redplayercore/redrender/: CMakeLists.txt
REDPlayer/source/redplayercore/redrender/audio/: audio_info.h
REDPlayer/source/redplayercore/redrender/audio/harmony/: harmony_audio_render.cc
REDPlayer/source/redplayercore/redsource/: CMakeLists.txt  RedFFExtractor.cc  RedFFUtil.cc
Sources/: CMakeLists.txt  CMakeSettings.json
Sources/FFmpegUniversal/: CMakeLists.txt  FFmpegUniversal.c
Sources/OpenSSLUniversal/: CMakeLists.txt  OpenSSLUniversal.c
Sources/QieMedia/: CMakeLists.txt  QieMedia.cpp  QieMedia.h
Sources/QieMediaDemo/AppScope/: app.json5
Sources/QieMediaDemo/AppScope/resources/base/element/: string.json
Sources/QieMediaDemo/entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
Sources/QieMediaDemo/entry/src/main/cpp/: CMakeLists.txt
Sources/QieMediaDemo/entry/src/main/ets/pages/: Index.ets
Sources/QieMediaNative/: CMakeLists.txt  Index.d.ts  QieMediaNative.cpp  QieMediaNative.h  oh-package.json5
